Bug 423508 - Starting a new game should reset the save game file
Summary: Starting a new game should reset the save game file
Status: RESOLVED FIXED
Alias: None
Product: knights
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-25 16:10 UTC by Christian Herenz
Modified: 2020-11-01 08:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Herenz 2020-06-25 16:10:50 UTC
SUMMARY

During a long game with a human opponent we wanted to take a break and try our best against an engine.  After we lost, I wanted to save the game (for later analysis) and just pressed save.  Instead of a dialog popping up it just overwrote the file from the previous game.  I believe a saner behaviour would to reset the save game file when a new game is started.

STEPS TO REPRODUCE
1. Start a game, make some moves, and save the game.
2. Start a new game, make some moves.
3. Press Save.

OBSERVED RESULT

The save game file from the previous game is overwritten.

EXPECTED RESULT

Ask for saving to a new file if a new game has been started.
Comment 1 Alexander Semke 2020-11-01 08:58:07 UTC
Git commit dbed8818f3a98f57f346438bf49d455ce9b767be by Alexander Semke.
Committed on 01/11/2020 at 08:55.
Pushed by asemke into branch 'master'.

Reset the file name if a new game is started.
FIXED-IN: 20.12

M  +1    -0    src/knights.cpp

https://invent.kde.org/games/knights/commit/dbed8818f3a98f57f346438bf49d455ce9b767be