Reset the file name if a new game is started.

BUG: 423508
FIXED-IN: 20.12